--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ cortex-m-rt = "0.7.3"
 embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "time-driver-any", "stm32f401cc", "memory-x", "unstable-pac", "exti"] }
 embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
 embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
-
+embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb", features = ["defmt" ] }
+embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
 
 embedded-hal = "1.0.0"
 embedded-hal-bus = "0.2.0"
@@ -26,6 +27,7 @@ portable-atomic = "1.9.0"
 ili9341 = "0.6.0"
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 display-interface = "0.5.0"
+profont = "0.7.0"
 
 [profile.release]
 debug = 2
