--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,4 +7,4 @@ runner = [ "probe-rs", "run", "--chip", "STM32F401CCUx", "--log-format", "{t} [{
 target = "thumbv7em-none-eabihf"    # Cortex-M4F and Cortex-M7F (with FPU)
 
 [env]
-DEFMT_LOG = "info"
+DEFMT_LOG = "trace"
