--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", featu
 embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
 embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
 embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb", features = ["defmt" ] }
+# embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg", features = ["defmt" ] }
 embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
 
 embedded-hal = "1.0.0"
@@ -28,11 +29,16 @@ ili9341 = "0.6.0"
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 display-interface = "0.5.0"
 profont = "0.7.0"
+static_cell = "2.1.0"
 
 [profile.release]
 debug = 2
 
 [[bin]]
 name = "stm32f401-embassy"
+harness = false
+
+[[bin]]
+name = "usb_serial"
 harness = false
 
