--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.3"
 
-embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "time-driver-any", "stm32f401cc", "memory-x", "unstable-pac", "exti"] }
-embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
-embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
-embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb", features = ["defmt" ] }
-# embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg", features = ["defmt" ] }
+embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["time-driver-any", "stm32f401cc", "memory-x", "unstable-pac", "exti", "defmt"] }
+embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
+embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
+embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb"} 
+embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg" }
 embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
 
 embedded-hal = "1.0.0"
@@ -42,3 +42,6 @@ harness = false
 name = "usb_serial"
 harness = false
 
+[[bin]]
+name = "tasks"
+harness = false
