--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 display-interface = "0.5.0"
 profont = "0.7.0"
 static_cell = "2.1.0"
+ds323x = "0.5.1"
+chrono = { version = "0.4.38", default-features = false }
+eg-seven-segment = "0.2.0"
 
 [profile.release]
 debug = 2
