--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ chrono = { version = "0.4.38", default-features = false }
 eg-seven-segment = "0.2.0"
 heapless = "0.8.0"
 embedded-io-async = "0.6.1"
+nom = { version = "7.1.3", default-features = false }
 
 [profile.release]
 debug = 2
