--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.3"
-
-embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["time-driver-any", "stm32f401cc", "memory-x", "unstable-pac", "exti", "defmt"] }
-embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
+cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
+embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["time-driver-tim3", "stm32f401cc", "memory-x", "unstable-pac", "exti", "defmt"] }
+embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
 embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
-embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb"} 
+embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb" } 
 embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg" }
 embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
 embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync" }
@@ -42,7 +41,14 @@ nom = { version = "7.1.3", default-features = false }
 debug = 2
 
 [[bin]]
-#name = "stm32f401-embassy"
 name = "clock"
+harness = false
+
+[[bin]]
+name = "async_display"
+harness = false
+
+[[bin]]
+name = "interrupt_executor"
 harness = false
 
